--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,11 +11,17 @@ dependencies:
   pin_code_fields: any
   expandable_page_view: ^1.0.17
   flutter_native_splash: ^2.1.19
+  flutter_launcher_icons: any
   flutter:
     sdk: flutter
 
 
   cupertino_icons: ^1.0.2
+
+flutter_icons:
+  android: "launcher_icon"
+  ios: true
+  image_path: "assets/icon.png"
 
 dev_dependencies:
   flutter_test:
